# beetsheet

./: README.md  pyproject.toml
src/beetsheet/: __init__.py  album_art.py  app.py  audio_player.py  cli.py  file_browser.py  metadata.py  metadata_writer.py  title_guesser.py
src/beetsheet/ui/: __init__.py  audio_controls.py  bulk_edit_screen.py  custom_palette.py  widgets.py
src/beetsheet/ui/css/: album_art.css  app.css  audio_player.css  command_palette.css  file_browser.css
